# rust-notes-app

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/: 20240420182102_init.down.sql  20240420182102_init.up.sql
src/: main.rs
